package boutique.modele;

/**
 * Etats du cycle de vie d'une commande.
 */
public enum EtatCommande {
    BROUILLON,
    VALIDEE
}
