@startuml
title Diagramme de Classes - Gestion des Commandes et Livraisons

enum EtatCommande {
  BROUILLON
  VALIDEE
}

class Produit {
  - reference : String
  - prixCentimes : int
  - poidsGrammes : int
  + Produit(reference : String, prixCentimes : int, poidsGrammes : int)
  + getReference() : String
  + getPrixCentimes() : int
  + getPoidsGrammes() : int
}

class ProduitFragile {
  - poidsEmballageSupplementaireGrammes : int
  + ProduitFragile(reference : String, prixCentimes : int, poidsGrammes : int, poidsEmballageSupplementaireGrammes : int)
  + getPoidsEmballageSupplementaireGrammes() : int
  + getPoidsGrammes() : int
}

class Catalogue {
  - nom : String
  - produits : List<Produit>
  + Catalogue(nom : String)
  + ajouterProduit(produit : Produit) : void
  + getProduits() : List<Produit>
}

class LigneCommande {
  - produit : Produit
  - quantite : int
  + LigneCommande(produit : Produit, quantite : int)
  + getProduit() : Produit
  + getQuantite() : int
  + getSousTotalCentimes() : int
  + getPoidsTotalGrammes() : int
}

class Commande {
  - id : String
  - client : String
  - etat : EtatCommande
  - lignes : List<LigneCommande>
  - modeLivraison : LivraisonStrategy
  - totalValide : Integer
  + Commande(id : String, client : String, modeLivraison : LivraisonStrategy)
  + ajouterLigne(produit : Produit, quantite : int) : void
  + setModeLivraison(mode : LivraisonStrategy) : void
  + getSousTotalCentimes() : int
  + getPoidsTotalGrammes() : int
  + getFraisLivraisonCentimes(config : ConfigurationProvider) : int
  + getTotalCentimes(config : ConfigurationProvider) : int
  + valider(notificationService : NotificationService, config : ConfigurationProvider) : void
  + getEtat() : EtatCommande
  + getClient() : String
  + getId() : String
}

package "Patron Strategy" {
  interface LivraisonStrategy {
    + calculerFrais(sousTotalCentimes : int, poidsTotalGrammes : int, config : ConfigurationProvider) : int
  }

  class LivraisonStandard implements LivraisonStrategy {
    + calculerFrais(sousTotalCentimes : int, poidsTotalGrammes : int, config : ConfigurationProvider) : int
  }

  class LivraisonExpress implements LivraisonStrategy {
    + calculerFrais(sousTotalCentimes : int, poidsTotalGrammes : int, config : ConfigurationProvider) : int
  }

  class RetraitEnMagasin implements LivraisonStrategy {
    + calculerFrais(sousTotalCentimes : int, poidsTotalGrammes : int, config : ConfigurationProvider) : int
  }
}

package "Patron Singleton et Configuration" {
  interface ConfigurationProvider {
    + getSeuilGratuiteStandardCentimes() : int
    + getPoidsMaximalGrammes() : int
  }

  class ConfigurationSingleton implements ConfigurationProvider {
    - {static} instance : ConfigurationSingleton
    - seuilGratuiteStandardCentimes : int
    - poidsMaximalGrammes : int
    - ConfigurationSingleton()
    + {static} getInstance() : ConfigurationSingleton
    + getSeuilGratuiteStandardCentimes() : int
    + getPoidsMaximalGrammes() : int
  }
}

package "Notification" {
  interface NotificationService {
    + notifierValidation(clientId : String, montantTotalCentimes : int) : void
  }

  class ConsoleNotificationService implements NotificationService {
    + notifierValidation(clientId : String, montantTotalCentimes : int) : void
  }
}

' Relations entre classes :
' Heritage
Produit <|-- ProduitFragile : spécialisation (surpoids emballage)

' Composition des lignes par Commande
Commande "1" *-- "1..*" LigneCommande : compose >

' Agregation des produits dans le catalogue
Catalogue "0..*" o-- "0..*" Produit : référence >

' Dependances
LigneCommande "*" --> "1" Produit : associe >
Commande "1" o-- "1" LivraisonStrategy : utilise (Strategy) >
Commande ..> NotificationService : dépendance ponctuelle (valider) >
Commande ..> ConfigurationProvider : dépendance ponctuelle (valider/calculs) >
LivraisonStrategy ..> ConfigurationProvider : consulte seuils >
Commande --> EtatCommande : état courant >

@enduml
